--- a/details/Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White.html
+++ b/details/Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White/71oczwOaHvL._SL1500_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White</h2>
+                                    <p class="price">$23.06</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Blue-Sky-Plastic-Silver-Dinnerware/dp/B01EMPRSP8/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526059419&sr=1-1&keywords=Blue+Sky+Plastic+Silver+Swirl+Dinnerware+Set%2C+50+Shrink+Pack%2C+White"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +402,17 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White/71oczwOaHvL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White/71oczwOaHvL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates//Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White/71NzXvlXBBL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates//Blue Sky Plastic Silver Swirl Dinnerware Set, 50 Shrink Pack, White/71NzXvlXBBL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +424,33 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Bundle of 50-piece Mystyle collection, china like white and silver plates, 25-7.5" Plates
+                                        and 25-10.25" Plates</li>
+                                    <li>Premium heavyweight plastic</li>
+                                    <li>Resembles hand-painted fine china, Hand wash to reuse</li>
+                                    <li>Elegant for any special occasion</li>
+                                    <li>Perfect for weddings, party's, holiday or family gatherings, or whenever you are on the
+                                        mood of a splendid affair</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Mystyle collection, china like white and silver plates are a must-have for any formal affair,
+                                    its disposable yet economical, and the most convenient element when preparing for an
+                                    event. Your table will have the lavish appearance of real china at a significant lower
+                                    cost. These elegant plastic plates are great for weddings and other events where you
+                                    need to impress without having to do the dishes afterwards, You can choose to dispose
+                                    or reuse these plates for another occasion. They are made of excellent quality and can
+                                    be cleaned and reused for future events. .
+                                    <br />
+                                    <br /> Founded in 1981, Blue Sky Trading Inc. revolutionized the market of disposable ware.
+                                    Already in its infancy, the company flooded shelves worldwide with incomparable products,
+                                    continuously expanding and refining its goods. From chic party goods to trusty household
+                                    items, Blue Sky has it all. The superior craftsmanship and quality present in every one
+                                    of the company’s items are what earned Blue Sky its reputable name. Blue Sky would like
+                                    to reassure you that while every dish is disposable our commitment to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
