--- a/details/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40).html
+++ b/details/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40).html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/41RInyBSBOL.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups,
+                                        Napkins, Plastic Forks and Knives (Party Pack For 40)</h2>
+                                    <p class="price">$32.99</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Christmas-Disposable-Dinnerware-Napkins-Party/dp/B01M1P15K8/ref=sr_1_2?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1525574214&sr=1-2&keywords=Christmas+Disposable+Dinnerware+for+40+Guests%2C+280+Pieces+Set+of+Paper+Plates%2C+Cups%2C+Napkins%2C+Plastic+Forks+and+Knives+%28PARTY+PACK+FOR+40%29"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +403,30 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/41PcL8KdZPL.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/41PcL8KdZPL.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/41u4FCkgiVL.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/41u4FCkgiVL.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/51-cGGIN4EL.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/51-cGGIN4EL.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/51nhxo3Bk8L.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Christmas Disposable Dinnerware for 40 Guests, 280 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives (PARTY PACK FOR 40)/51nhxo3Bk8L.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +435,29 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>Bundle includes all your holiday party needs in one handy package for a fun, Christmas
+                                        and winter party, serves 40</li>
+                                    <li>Includes: (40) 10.25” sturdy dinner plates, (40) 7.5” sturdy salad plates, (40) 9oz paper
+                                        cups, (40) luncheon size napkins, (80) clear plastic forks, (40) clear plastic knives.</li>
+                                    <li>Vibrant graphics and quality materials from Blue Sky will add cheer to your holiday table.</li>
+                                    <li></li>
+                                    <li>Disposable paper reduces clean-up time so you can enjoy more time with friends and family</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
-                                    <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
-                                    <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
-                                    to you is everlasting.
-                                </p>
+                                <p>Celebrate the holidays in style with this high-quality disposable dinnerware set and enjoy
+                                    easy clean up. This Christmas and winter holiday party kit brings it all together for
+                                    you. You won't waste your time hunting down each piece of the party. service for 40 includes
+                                    two sizes of plates, napkins, cups, and cutlery. Whether you're planning an intimate
+                                    dinner, a family gathering or a party, you can trust Blue Sky for high quality, consistent
+                                    color matching and attention to detail.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
