--- a/details/Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives.html
+++ b/details/Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives/81GWqoEnB2L._SL1500_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,13 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups,
+                                        Napkins, Plastic Forks and Knives</h2>
+                                    <p class="price">$62.34</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Christmas-Disposable-Dinnerware-Napkins-Plastic/dp/B016YGA8AA/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526021921&sr=1-1&keywords=Christmas+Disposable+Dinnerware+for+80+Guests%2C+560+Pieces+Set+of+Paper+Plates%2C+Cups%2C+Napkins%2C+Plastic+Forks+and+Knives"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +403,10 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives/81GWqoEnB2L._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Christmas Disposable Dinnerware for 80 Guests, 560 Pieces Set of Paper Plates, Cups, Napkins, Plastic Forks and Knives/81GWqoEnB2L._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +418,34 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Bundle includes all your holiday party needs in one handy package for a fun, Christmas
+                                        and winter party, serves 20</li>
+                                    <li>Includes: (80) 10.25” sturdy dinner plates, (80) 7.5” sturdy salad plates, (80) 9oz paper
+                                        cups, (80) luncheon size napkins, (160) clear plastic forks, (80) clear plastic knives.</li>
+                                    <li>Vibrant graphics and quality materials from Blue Sky will add cheer to your holiday table.</li>
+                                    <li>Disposable paper reduces clean-up time so you can enjoy more time with friends and family</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Celebrate the holidays in style with this high quality disposable dinnerware set and enjoy
+                                    easy clean up. This Christmas and winter holiday party kit brings it all together for
+                                    you. You won't waste your time hunting down each piece of the party. service for 80 includes
+                                    two sizes of plates, napkins, and cups. Whether you're planning an intimate dinner, a
+                                    family gathering or a party, you can trust Blue Sky for high quality, consistent color
+                                    matching and attention to detail.
+                                    <br />
+                                    <br /> Your party is ready to go. A great choice for all the holiday season.
+                                    <br />
+                                    <br /> Founded in 1981, Blue Sky Trading Inc. revolutionized the market of disposable ware.
+                                    Already in its infancy, the company flooded shelves worldwide with incomparable products,
+                                    continuously expanding and refining its goods. From chic party goods to trusty household
+                                    items, Blue Sky has it all. The superior craftsmanship and quality present in every one
+                                    of the company’s items are what earned Blue Sky its reputable name.
+                                    <br /> Blue Sky would like to reassure you that while every dish is disposable our commitment
+                                    to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
