--- a/details/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags.html
+++ b/details/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags.html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/61VcwfbtGCL._SL1500_.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear
+                                        Bag, 450 Bags</h2>
+                                    <p class="price">$14.57</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Party-Bargains-Plastic-Unprinted-Produce/dp/B01N0AQ89N/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526200382&sr=1-1&keywords=Party+Bargains+10%22+X+15%22+Plastic+Unprinted+Produce+Bag+on+a+Roll%2C+Bread+and+Grocery+Clear+Bag%2C+450+Bags"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +403,23 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/61VcwfbtGCL._SL1500_.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/61VcwfbtGCL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/31yRqVgBYKL.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/31yRqVgBYKL.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/41IINcy+0XL.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/containers/Party Bargains 10 X 15 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 450 Bags/41IINcy+0XL.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +428,41 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>Size: 10" x 15", clear bag. Fits most produce roll dispenser stands</li>
+                                    <li>450 Bags On A Roll</li>
+                                    <li>Holds self-serve items such as fresh fruit, produce, candy and baked goods</li>
+                                    <li>Continuous roll with easy-open perforation for dispensing</li>
+                                    <li>Perfect for farm stands, grocery stores, and fruit stands</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
+                                <p>Party Bargains 10x15 inches Plastic bag on a roll is your perfect solution for wrapping Breads,
+                                    Pastries, Produce vegetable and fruits, snacks and candies or every day leftovers at
+                                    the Kitchen.
                                     <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
+                                    <br /> The bags are high quality and feel durable; they are clear in color so it’s very easy
+                                    to see what is placed inside the bags. Since the bags are packaged on a roll it makes
+                                    it very easy to tear them apart.
                                     <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
+                                    <br /> Party Bargains offers a comprehensive assortment of plastic party and catering tableware.
+                                    Their designs range from classic to contemporary; and the products establish tomorrow's
+                                    trends in today's market. A decade of experience in the disposable tableware industry
+                                    ensures they know just what the customer wants. Party Bargains standards are set high.
+                                    The commitment to being at the cutting edge of style and originality without ever compromising
+                                    on quality or practicality is evident in every one of their products; and their mission
+                                    is to enhance the most upscale event and please the most discriminating customer
+                                    <br />
+                                    <br /> Party Bargains would like to reassure you that while every dish is disposable our commitment
                                     to you is everlasting.
+
                                 </p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>10" x 15"</li>
                                 </ul>
 
                                 <!-- <blockquote>
