--- a/details/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs  Combo Pack for 80 People.html
+++ b/details/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs  Combo Pack for 80 People.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs/91bD5DNfElL._SX522_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,16 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like
+                                        Cutlery Imperial Collection China Like Plate and Silverware - 480 Pcs Combo Pack
+                                        for 80 People</h2>
+                                    <p class="price">$109.99 +
+                                        <smmall>$26.74 shipping</smmall>
+                                    </p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Bargains-Plastic-Collection-Imperial-Silverware/dp/B01MU1ITP6/ref=sr_1_2?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526185590&sr=1-2&keywords=Party+Bargains+Ivory+Gold+160+Square+Plastic+Plates+%26+320+Upscale+Collection+Silver+Like+Cutlery+%7C+Imperial+Collection+China+Like+Plate+and+Silverware+-+480+Pcs+%7C+Combo+Pack+for+80+People"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +406,17 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs/91bD5DNfElL._SX522_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs/91bD5DNfElL._SX522_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs/71sgM0ZcpzL._SX522_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains Ivory Gold 160 Square Plastic Plates & 320 Upscale Collection Silver Like Cutlery  Imperial Collection China Like Plate and Silverware - 480 Pcs/71sgM0ZcpzL._SX522_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +428,42 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Elegant Disposable Place Settings for 80 people Premium Heavy Weight Square China Like
+                                        Plastic Plates, Ivory with Gold border.</li>
+                                    <li>Brand New Condition. To ensure Quality, please make sure your purchase is made from Party
+                                        Bargains. Sleek and appealing design that is guaranteed to wow your guest and event
+                                        attendees, and will elevate your event to the next level in elegance.</li>
+                                    <li>Economical solution to create an elegant affair without having to buy real china plates.
+                                        Looks like real china plates, for a fraction of the cost</li>
+                                    <li>80 Imperial Collection Ivory 10 Inch Square china like plates and 80 Imperial Collection
+                                        Ivory 8 Inch Square china like plates</li>
+                                    <li>320 Pieces of Upscale Collection Heavyweight Silver Plastic Cutlery 160 Forks / 80 Knives
+                                        / 80 Spoons</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Imperial premium heavy weight elegant square china like plastic plates looks just like real
+                                    china when you set it on your table. It is made from high quality heavyweight disposable
+                                    plastic material and has a beautiful design border. Use it for your wedding reception,
+                                    high end birthday party, baby shower, office party or use it at home for special dinners.
+                                    <br />
+                                    <br /> When you set your table with this plates it will wow your guest and make a grand appearance,
+                                    they won’t believe it’s not real china plates, it gives you all the benefits of china
+                                    plates without the hassle of cleaning and washing the dishes, but you may choose to hand
+                                    wash it and reuse it since it made of durable and premium quality.
+                                    <br />
+                                    <br /> Party Bargains offers a comprehensive assortment of plastic party and catering tableware.
+                                    Their designs range from classic to contemporary; and the products establish tomorrow's
+                                    trends in today's market. A decade of experience in the disposable tableware industry
+                                    ensures they know just what the customer wants. Party Bargains standards are set high.
+                                    The commitment to being at the cutting edge of style and originality without ever compromising
+                                    on quality or practicality is evident in every one of their products; and their mission
+                                    is to enhance the most upscale event and please the most discriminating customer.
+                                    <br /> Party Bargains would like to reassure you that while every dish is disposable our commitment
+                                    to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>10" and 8" square</li>
                                 </ul>
 
                                 <!-- <blockquote>
