--- a/details/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count).html
+++ b/details/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count).html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)/71-Xmb83fZL._SL1500_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)</h2>
+                                    <p class="price">$14.56</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Party-Bargains-Everyday-Disposable-Plates/dp/B01M9J43WS/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526179056&sr=1-1&keywords=Party+Bargains+Value+Pack+Everyday+Disposable+9%E2%80%9D+White+Paper+Plates+%28300+Count%29"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +402,17 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)/71-Xmb83fZL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)/71-Xmb83fZL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)/71N7WNXJgML._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains Value Pack Everyday Disposable 9” White Paper Plates (300 Count)/71N7WNXJgML._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +424,35 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>9" circular disposable plate for single-use food service</li>
+                                    <li>Uncoated 100% paper is lightweight, microwave safe, and recyclable</li>
+                                    <li>Fluted brim to help prevent food from rolling or sliding off</li>
+                                    <li>Large value pack of 300 plates</li>
+                                    <li>Environmental friendly</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Party Bargains White Every Day Dinnerware 9" Disposable Paper Plate, 300 Count. Designed
+                                    for all occasions, corporate, parties, home, commercial food services; Schools/restaurants/Nursing
+                                    Facilities/Hospitals.
+                                    <br />
+                                    <br /> The plate's 100% paper construction is lightweight and uncoated for safe use in microwaves
+                                    and for recycling disposal. It has a fluted brim to help prevent food from rolling or
+                                    sliding off the plate, suitable for holding hot and cold dishes and very economical •
+                                    <br />
+                                    <br /> Party Bargains offers a comprehensive assortment of plastic party and catering tableware.
+                                    Their designs range from classic to contemporary; and the products establish tomorrow's
+                                    trends in today's market. A decade of experience in the disposable tableware industry
+                                    ensures they know just what the customer wants. Party Bargains standards are set high.
+                                    The commitment to being at the cutting edge of style and originality without ever compromising
+                                    on quality or practicality is evident in every one of their products; and their mission
+                                    is to enhance the most upscale event and please the most discriminating customer
+                                    <br />
+                                    <br /> Party Bargains would like to reassure you that while every dish is disposable our commitment
+                                    to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>9" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
