--- a/details/Party Bargains White Disposable Plates  Rectangular Hard Plastic Salad & Dessert Plate Perfect for Catering Events, Restaurant and Takeout - Size 5 X 7  Pack of 80.html
+++ b/details/Party Bargains White Disposable Plates  Rectangular Hard Plastic Salad & Dessert Plate Perfect for Catering Events, Restaurant and Takeout - Size 5 X 7  Pack of 80.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Party Bargains White Disposable Plates  Rectangular Hard Plastic Salad & Dessert Plate Perfect for Catering Events, Restaurant and Takeout - Size 5 X 7  Pack of 80/71q6zB00SwL._SL1500_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,13 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Party Bargains White Disposable Plates Rectangular Hard Plastic Salad & Dessert Plate
+                                        - Size 5 X 7 | Pack of 80</h2>
+                                    <p class="price">$21.61</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Party-Bargains-Disposable-Rectangular-Restaurant/dp/B01N80IBXN/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1525918314&sr=1-1&keywords=Party+Bargains+White+Disposable+Plates+%7C+Rectangular+Hard+Plastic+Salad+%26+Dessert+Plate+Perfect+for+Catering+Events%2C+Restaurant+and+Takeout+-+Size+5+X+7+%7C+Pack+of+80"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +403,10 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains White Disposable Plates  Rectangular Hard Plastic Salad & Dessert Plate Perfect for Catering Events, Restaurant and Takeout - Size 5 X 7  Pack of 80/71q6zB00SwL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains White Disposable Plates  Rectangular Hard Plastic Salad & Dessert Plate Perfect for Catering Events, Restaurant and Takeout - Size 5 X 7  Pack of 80/71q6zB00SwL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +418,63 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>HIGH GRADE - Made from high-grade premium quality plastic great for everyday and special
+                                        occasions. Sturdy enough to carry salads and desserts without sagging or tearing.</li>
+                                    <li>Brand New Condition. To ensure Quality, please make sure your purchase is made from Party
+                                        Bargains.
+                                    </li>
+                                    <li>ELEGANT EASY to use whether for everyday use, indoor or outdoor, these plates will leave
+                                        their mark on your guests and not in your sink, so enjoy entertaining.</li>
+                                    <li>ECONOMICAL AND EASY CLEAN-UP – Party bargains Plates are affordable, practical, reusable
+                                        and disposable. Just fill, eat and trash.</li>
+                                    <li>CERTIFIED AND TESTED - Our Party Bargains Disposable Hard Plastic Rectangular Plates
+                                        are made from superb material plastic make a great gift for people who like easy
+                                        entertaining and casual everyday elegance.</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Design
+                                    <br />
+                                    <br /> Each plate is carefully designed with the right depth and fluted edges.
+                                    <br /> Party Bargains plates are made from a high-grade premium quality plastic.
+                                    <br /> It has smooth edges with an upscale feel at an affordable price.
+                                    <br />
+                                    <br /> Uses
+                                    <br />
+                                    <br /> Ideal for picnics, weddings, barbecues, reunions and birthdays.
+                                    <br /> Great for everyday use and special occasions.
+                                    <br /> Switch to our plastic plates at your next outdoor event where traditional dinnerware
+                                    can be a hassle.
+                                    <br />
+                                    <br /> Specification
+                                    <br />
+
+                                    <br /> Party Bargains Salad/Dessert Plates
+                                    <br /> Manufacturer: Party Bargains
+                                    <br /> Shape: Rectangular
+                                    <br /> Color: Clear
+                                    <br /> Size: 5 X 7
+                                    <br /> Count: pack of 80
+                                    <br />
+                                    <br /> Highlights
+                                    <br />
+                                    <br /> Easy to store and light to handle.
+                                    <br /> Affordable, practical and disposable.
+                                    <br /> Cut resistance.
+                                    <br /> Easy clean up.
+                                    <br />
+                                    <br /> Party Bargains offers a comprehensive assortment of plastic party and catering tableware.
+                                    Their designs range from classic to contemporary; and the products establish tomorrow's
+                                    trends in today's market. A decade of experience in the disposable tableware industry
+                                    ensures they know just what the customer wants. Party Bargains standards are set high.
+                                    The commitment to being at the cutting edge of style and originality without ever compromising
+                                    on quality or practicality is evident in every one of their products; and their mission
+                                    is to enhance the most upscale event and please the most discriminating customer.
+                                    <br /> Party Bargains would like to reassure you that while every dish is disposable our commitment
+                                    to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>5"x7"</li>
                                 </ul>
 
                                 <!-- <blockquote>
