--- a/details/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates).html
+++ b/details/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates).html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates)/714NEul2e-L._SL1500_.jpg" alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,8 +387,10 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Signature Collection Premium China Like White/silver 40 Pieces Plastic Plates
+                                        Package (Includes 20 7.5 Inch Plates, 20 10.25
+                                        Inch Plates)</h2>
+                                    <p class="price">$20.99</p>
 
                                     <p class="text-center buttons">
                                         <a href="" target="_blank" class="btn btn-primary">
@@ -400,13 +402,13 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates)/714NEul2e-L._SL1500_.jpg" class="thumb">
+                                            <img src="../img/products/plates/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates)/714NEul2e-L._SL1500_.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates)/711bYTw-H2L._SL1500_.jpg" class="thumb">
+                                            <img src="../img/products/plates/Signature Collection Premium China Like Whitesilver 40 Pieces Plastic Plates Package, Wedding and Party Dinnerware (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates)/711bYTw-H2L._SL1500_.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,8 +420,6 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
                                     <li></li>
                                     <li></li>
@@ -427,6 +427,8 @@
                                     <li></li>
                                     <li></li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p></p>
                                 <h4>Size</h4>
                                 <ul>
                                     <li></li>
