--- a/details/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round White Plastic Plates with Hammered.html
+++ b/details/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round White Plastic Plates with Hammered.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like, Pack Of 40 9Inch Round Disposable Like Real Plates, White Plastic Plates with Hammered Silve/71dWzzc9Z7L._SL1500_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,13 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch
+                                        Round</h2>
+                                    <p class="price">$31.48</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Collection-Hammered-10-25Inch-Party-Disposable/dp/B01HT1A4U8/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1525857614&sr=1-1&keywords=Silver+Touch+Collection%2C+High+Gloss+Hammered+Style+China+Like+Plates%2C+Pack+Of+40+10.25Inch+Round+White+Plastic+Plates+with+Hammered+Silver+Border"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +403,31 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81lJyjxKMpL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81lJyjxKMpL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/71J4wBh7WCL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/71J4wBh7WCL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81tTEcnypTL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81tTEcnypTL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81YKSZUKyKL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Silver Touch Collection, High Gloss Hammered Style China Like Plates, Pack Of 40 10.25Inch Round Disposable Like Real, White Plastic with Hammered Silver Border/81YKSZUKyKL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +439,34 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Sleek and appealing design that is guaranteed to wow your guest and event attendees,
+                                        and will elevate your event to the next level in elegancy.</li>
+                                    <li>Elegant White China-Like Plates with High Gloss Hammered Silver Border, that feels and
+                                        looks like real plates for a fraction of the cost of real china dishes.</li>
+                                    <li>Avoid the hassle of schlepping and cleaning your dishes before, during and after the
+                                        event, disposable or reuse as per your desire.</li>
+                                    <li>ELEGANT ENOUGH for any special occasion, CHEAP ENOUGH for any budget.</li>
+                                    <li>PREMIUM heavyweight THICK plastic material.</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Silver touch, china like white plates are a must-have for any formal affair, its disposable
+                                    yet economical, and the most convenient element when preparing for an event. Your table
+                                    will have the lavish appearance of real china at a significant lower cost. These elegant
+                                    plastic plates are great for weddings and other events where you need to impress without
+                                    having to do the dishes afterwards, You can choose to dispose or reuse these plates for
+                                    another occasion. They are made of excellent quality and can be cleaned and reused for
+                                    future events.
+                                    <br />
+                                    <br /> Founded in 1981, Blue Sky Trading Inc. revolutionized the market of disposable ware.
+                                    Already in its infancy, the company flooded shelves worldwide with incomparable products,
+                                    continuously expanding and refining its goods. From chic party goods to trusty household
+                                    items, Blue Sky has it all. The superior craftsmanship and quality present in every one
+                                    of the company’s items are what earned Blue Sky its reputable name. Blue Sky would like
+                                    to reassure you that while every dish is disposable our commitment to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>10.25" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
