--- a/details/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags.html
+++ b/details/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags.html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/containers/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags/31lfFr6QnkL.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,11 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags</h2>
+                                    <p class="price">$14.57</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Plastic-Unprinted-Produce-Bread-Grocery/dp/B00FERHTF8/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526198247&sr=1-1&keywords=12%22+X+20%22+Plastic+Unprinted+Produce+Bag+on+a+Roll%2C+Bread+and+Grocery+Clear+Bag%2C+340+Bags"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +402,16 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/containers/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags/31lfFr6QnkL.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/containers/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags/31lfFr6QnkL.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/containers/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags/41Ro-7+rB6L.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/containers/12 X 20 Plastic Unprinted Produce Bag on a Roll, Bread and Grocery Clear Bag, 340 Bags/41Ro-7+rB6L.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +420,22 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>Holds self-serve items such as fresh fruit, produce, candy and baked goods</li>
+                                    <li>Continuous roll with easy-open perforation for dispensing</li>
+                                    <li>340 Bags On A Roll</li>
+                                    <li>Size: 12"x20", clear bag. Fits most produce roll dispenser stands.</li>
+                                    <li>Perfect for farm stands, grocery stores, and fruit stands</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
-                                    <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
-                                    <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
-                                    to you is everlasting.
-                                </p>
+                                <p>Blue Sky 12 x 20 inches Plastic bag on a roll is your perfect solution for wrapping Breads, Pastries, Produce vegetable and fruits, snacks and candies or every day leftovers at the Kitchen. The bags are high quality and feel durable, they are clear in color so its very easy to see what is placed inside the bags. Since the bags are packaged on a roll it makes it very easy to tear them apart.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>12" x 20"</li>
                                 </ul>
 
                                 <!-- <blockquote>
