--- a/details/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear.html
+++ b/details/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear/61-bf32ERQL._SL1371_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9" x 12", Clear</h2>
+                                    <p class="price">$9.11</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Blue-Sky-Heavyweight-Plastic-Platters/dp/B009YSM3Y0/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526001023&sr=1-1&keywords=Blue+Sky+10+Count+Heavyweight+Plastic+Oval+Platters%2C+9%22+x+12%22%2C+Clear"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +402,16 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear/61-bf32ERQL._SL1371_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear/61-bf32ERQL._SL1371_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear/31quQ04KNtL.jpg" class="thumb">
+                                            <img src="../img/products/plates/Blue Sky 10 Count Heavyweight Plastic Oval Platters, 9 x 12, Clear/31quQ04KNtL.jpg" alt=""
+                                                class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +423,22 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Platter for center table, or for serving</li>
+                                    <li>Made of quality, clear heavyweight plastic</li>
+                                    <li>10 per pack</li>
+                                    <li>Measures 9" x 12"</li>
+                                    <li>Affordable, practical and disposable</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Perfectly- sized platters will help you serve the whole crowd. Layer the food in heaps and
+                                    piles and these plastic platters will do the job seamlessly, because they are made of
+                                    heavyweight plastic. Catch the crowds' appetite quickly by using platters and you'll
+                                    be rated the best host. Blue sky Inc.'s Experience in the world of party goods helps
+                                    you preplan, prepare and party!</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>9"x12"</li>
                                 </ul>
 
                                 <!-- <blockquote>
