--- a/details/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware.html
+++ b/details/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware.html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71mJa0lqnKL._SL1500_.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic
+                                        Plates, Wedding and Party Dinnerware</h2>
+                                    <p class="price">$16.99</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Collection-Premium-Plastic-Wedding-Dinnerware/dp/B01FY91YRY/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526182610&sr=1-1&keywords=Hotel+Ware+Square+Plates+Collection%2C+40+Pack+Premium+China+Like+6.25+Inch+Sq.+Plastic+Plates%2C+Wedding+and+Party+Dinnerware"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +403,23 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71mJa0lqnKL._SL1500_.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71mJa0lqnKL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71ehpAAfdfL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71ehpAAfdfL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71OQx5XmdcL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Hotel Ware Square Plates Collection, 40 Pack Premium China Like 6.25 Inch Sq. Plastic Plates, Wedding and Party Dinnerware/71OQx5XmdcL._SL1500_.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +428,39 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>THE CLOSEST THING TO REAL CHINA PLATES you will ever find, You will be ready to swear
+                                        that this is in fact real china till you actually pick it up, Hotel-Ware collection
+                                        is our most updated like real plates.</li>
+                                    <li>SLEEK AND APPEALING STRIPED BORDERS that is guaranteed to wow your guest and event attendees,
+                                        and will elevate your event to the next level in elegancy.</li>
+                                    <li>AVOID THE HASSLE OF SCHLEPPING AND CLEANING your dishes before, during and after the
+                                        event, disposable or reuse as per your desire.</li>
+                                    <li>ELEGANT ENOUGH for any special occasion, CHEAP ENOUGH for any budget.</li>
+                                    <li>PREMIUM heavyweight THICK plastic material.</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
+                                <p>Hotel-Ware collection, china like white plates are a must-have for any formal affair, its
+                                    disposable yet economical, and the most convenient element when preparing for an event.
+                                    Your table will have the lavish appearance of real china at a significant lower cost.
+                                    These elegant plastic plates are great for weddings and other events where you need to
+                                    impress without having to do the dishes afterwards, You can choose to dispose or reuse
+                                    these plates for another occasion. They are made of excellent quality and can be cleaned
+                                    and reused for future events.
                                     <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
-                                    <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
-                                    to you is everlasting.
-                                </p>
+                                    <br /> Founded in 1981, Blue Sky Trading Inc. revolutionized the market of disposable ware.
+                                    Already in its infancy, the company flooded shelves worldwide with incomparable products,
+                                    continuously expanding and refining its goods. From chic party goods to trusty household
+                                    items, Blue Sky has it all. The superior craftsmanship and quality present in every one
+                                    of the company’s items are what earned Blue Sky its reputable name. Blue Sky would like
+                                    to reassure you that while every dish is disposable our commitment to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>6.25" square</li>
                                 </ul>
 
                                 <!-- <blockquote>
