--- a/details/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40.html
+++ b/details/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40.html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/71iQo1tf8OL._SL1500_.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,13 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">Disposable Plastic Plates Combo | Premium Quality White Dinnerware Set | Excellent for
+                                        Weddings, Baby & Bridal Showers, Engagement Parties & More | 7.5 Inch & 10.25 Inch
+                                        20 Plates Each | 40 Count</h2>
+                                    <p class="price">$20.58</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Disposable-Dinnerware-Excellent-Weddings-Engagement/dp/B06XTWQ8M4/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526194062&sr=1-1&keywords=Party+Bargains+White+Plate+%7C+MOD+Collection+Durable+%26+Heavyweight+Plastic+Plates+Includes+20+x+7.5%22+Plates+and+20+x+10.25%22+Plates+-+Combo+Package+%7C+Pack+of+40"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +404,23 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/71iQo1tf8OL._SL1500_.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/71iQo1tf8OL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/613RB1raoFL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/613RB1raoFL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/7193BeWnJWL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains White Plate  MOD Collection Durable & Heavyweight Plastic Plates Includes 20 x 7.5 Plates and 20 x 10.25 Plates - Combo Package  Pack of 40/7193BeWnJWL._SL1500_.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +429,70 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>Durable & Heavy-weight: Strong and durable disposable party plates that are high quality
+                                        and user-friendly dinnerware. Beautiful & fancy tableware designed for any occasions
+                                        such as weddings, parties, bridal showers, banquets, birthdays, catering, dinner,
+                                        and many more. Includes 7.5 inches & 10.25 inches 20 pieces each - a total of 40
+                                        luxurious looking plastic plates. These will add a nice touch and class to every
+                                        dining table.</li>
+                                    <li>Beautiful & Elegant: Modern and sleek plastic disposable plates designed to give your
+                                        table settings an amazing and gorgeous look. Made of a sturdy plastic that does not
+                                        feel cheap like the usual plastic disposable dinner plates. Use these for any cocktail
+                                        parties, prom nights and it will perfectly accommodate the capacity for serving needs
+                                        from salads, desserts, custard or even buffets.</li>
+                                    <li>Convenient & Reusable: Take these disposable plastic party plates to a whole different
+                                        level. Our plastic dinner plates are hand washable, recyclable and disposable for
+                                        a quick after party clean up. Ideal for large events, hassle free and no worries
+                                        about transporting, breakage and cleaning of your dishes.</li>
+                                    <li>Functional Disposable Plate: Unique and classy looking heavyweight plastic dishes that
+                                        are well-made and realistic. High end and intricate white flatware that gives elegance
+                                        and sophistication to any special celebration such as wedding receptions, engagement
+                                        parties, bridal showers, anniversaries or just an ordinary family dinner in your
+                                        very own home.</li>
+                                    <li>Great Value for Your Money: If you are not satisfied for any reason, simply return the
+                                        item for a full refund, no questions asked. 100% 90 DAY MONEY BACK GUARANTEE!</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
+                                <p>Features:
                                     <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
-                                    <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
-                                    to you is everlasting.
-                                </p>
+                                    <br /> Bundle of 40-Piece - MOD Collection Elegant Plates are Perfect for All Occasions with
+                                    Friends and Family.
+                                    <br /> Hard and Sturdy - They can Hold Foods of All Kinds better than Paper, Aluminum or Cheap
+                                    Plastic Plates.
+                                    <br /> Two Convenient Sizes - One package to Serve Everything From Appetizers, Salads, Desserts,
+                                    Custard or Even Buffets.
+                                    <br /> Super Package - Two Sized 20-7.5" and 20-10.25" High Quality Plates in One Package.
+                                    <br /> Premium & Strong Plastic - Set of 40-piece royalty collection are Elegant for any special
+                                    occasion. Great for Wedding, Parties.</p>
+                                <br />
+                                <br /> Product description:
+                                <br />
+                                <br /> MOD collection, china like white plates are a must-have for any formal affair, it's disposable
+                                yet economical, and the most convenient element when preparing for an event. Your table will
+                                have the lavish appearance of real china at a significantly lower cost. These elegant plastic
+                                plates are great for weddings and other events where you need to impress without having to
+                                do the dishes afterward, you can choose to dispose or reuse these plates for another occasion.
+                                They are made of excellent quality and can be cleaned and reused for future events.
+                                <br />
+
+                                <br /> Party Bargains offers a comprehensive assortment of plastic party and catering tableware.
+                                Their designs range from classic to contemporary, and the products establish tomorrow's trends
+                                in today's market. A decade of experience in the disposable tableware industry ensures they
+                                know just what the customer wants. Party Bargains standards are set high. The commitment
+                                to being at the cutting edge of style and originality without ever compromising on quality
+                                or practicality is evident in every one of their products, and their mission is to enhance
+                                the most upscale event and please the most discriminating customer
+                                <br />
+                                <br />Party Bargains would like to reassure you that while every dish is disposable our commitment
+                                to you is everlasting.
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
