--- a/details/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates, Perfect for Weddings and Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Inch  Pack of 32.html
+++ b/details/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates, Perfect for Weddings and Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Inch  Pack of 32.html
@@ -369,7 +369,8 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="" alt="" class="img-responsive">
+                                    <img src="../img/products/plates/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Pack of 32/81Q4rzquesL._SL1270_.jpg"
+                                        alt="" class="img-responsive">
                                 </div>
 
                                 <!-- <div class="ribbon sale">
@@ -387,11 +388,13 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center"></h2>
-                                    <p class="price">$</p>
+                                    <h2 class="text-center">Party Bargains White Round China Like Plate | Silver Touch Collection High Gloss Hammered
+                                        Style Disposable plates - 16 x 10.25 Inch & 16 x 7.5 Inch | Pack of 32</h2>
+                                    <p class="price">$30.42</p>
 
                                     <p class="text-center buttons">
-                                        <a href="" target="_blank" class="btn btn-primary">
+                                        <a href="https://www.amazon.com/Party-Bargains-Collection-Disposable-Dinnerware/dp/B0751GVF3V/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1525790908&sr=1-1&keywords=Party+Bargains+White+Round+China+Like+Plate+%7C+Silver+Touch+Collection+High+Gloss+Hammered+Style+Disposable+plates+-+16+x+10.25+Inch+%26+16+x+7.5+Inch+%7C+Pack+of+32"
+                                            target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
 
@@ -400,13 +403,17 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Pack of 32/81Q4rzquesL._SL1270_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Pack of 32/81Q4rzquesL._SL1270_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="" class="thumb">
-                                            <img src="" alt="" class="img-responsive">
+                                        <a href="../img/products/plates/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Pack of 32/81eFLDXGkHL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargains White Round China Like Plate  Silver Touch Collection High Gloss Hammered Style Disposable plates Dinnerware - 16 x 10.25 Inch & 16 x 7.5 Pack of 32/81eFLDXGkHL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
@@ -418,18 +425,47 @@
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
-                                <p></p>
-                                <h4>Other Description</h4>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>DISPOSABLE PLATE: Used in different occasions and big events like weddings, birthdays,
+                                        baby shower, banquets, etc. It’s ideal to use even for a simple get-together or dinner
+                                        party at home. These disposable white round plates are perfect when catering for
+                                        a younger crowd, aside from it is lighter than the plate made of ceramics, there’s
+                                        no risk of damages or breakages to worry about and pay for it too.</li>
+                                    <li>CONVENIENT: The use of white round plastic plates makes it much easier for transporting
+                                        everything as well as for cleaning up once the event has come to an end. Sweeping
+                                        everything into the rubbish bag is all that will be needed, allowing the rest of
+                                        the cleaning process to take place quickly and effectively.</li>
+                                    <li>BUDGET FRIENDLY: When budgets are very tight use disposable white round plates, as these
+                                        products are convenient and easily affordable. You have the option to dispose it
+                                        or wash and utilize it again for future use because the style suits different event.
+                                        It is weightless and not fragile can be stuck easily anywhere in your kitchen.</li>
+                                    <li>HIGH QUALITY: Made of disposable and reusable plastic that is sturdy and durable, looks
+                                        elegant like real white round high gloss hammered style china with a feel like real
+                                        plates.</li>
+                                    <li>WIDELY USE: Caterers prefer these elegant white round plates aside from its durability
+                                        and cleanliness, no need to carry a huge bulk of heavy plates, no need to do the
+                                        washing before during or after the party.</li>
                                 </ul>
+                                <h4>Other Description</h4>
+                                <p>Parties are anything but tidy, make sure to use elegant white round high gloss hammered style china disposable like real plates.
+                                    These plates are made of high quality disposable and reusable plastic that is sturdy and durable, so whatever the get-together may be in aid of - a birthday, wedding, anniversary or graduation rest assured that the 3-course meal planned will be provided with a strong base.
+                                    White round disposable plates look very smart and professional and are very cheap to purchase. The style suits different events.
+                                    The use of disposable plates avoids the common issue of breakages at events. 
+                                    This can be quite a common problem when hosting a large scale event and can cause unnecessary inconvenience and extra cost when having to replace these plates. 
+                                    <br />
+                                    <br />
+                                    NEW FEATURES 
+                                    <br />
+                                    * Disposable elegant white round plates can be used for any event.
+                                    <br />
+                                    * Durable won’t break easily
+                                    <br />
+                                    * Affordable
+                                    <br />
+                                    * Cleaning process is easy.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li></li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
