--- a/details/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Dinnerware Set  pack of 50.html
+++ b/details/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Dinnerware Set  pack of 50.html
@@ -369,7 +369,7 @@
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                    <img src="../img/products/plates/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Perfect for Wedding and Party Dinnerware Set  pack of 50/81PCLzSgoFL._SL1500_.jpg"
                                         alt="" class="img-responsive">
                                 </div>
 
@@ -388,11 +388,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="box">
-                                    <h2 class="text-center">Signature Collection Premium China Like White/Gold 40 Pieces Plastic Plates Package(Gold)</h2>
-                                    <p class="price">$22.15</p>
+                                    <h2 class="text-center">Party Bargins Swirl Plate | Heavyweight Plastic Elegant & Durable Mystyle Collection
+                                        Disposable Plates Perfect for Wedding and Party Dinnerware Set | pack of 50</h2>
+                                    <p class="price">$22.56</p>
 
                                     <p class="text-center buttons">
-                                        <a href="https://www.amazon.com/Signature-Collection-Premium-Party-Dinnerware/dp/B01M3XBY3K/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1523236849&sr=1-1&keywords=Signature+Collection+Premium+China+Like+White%2FGold+40+Pieces+Plastic+Plates+Package+%28Includes+20+7.5+Inch+Plates%2C+20+10.25+Inch+Plates%29+%28Gold%29"
+                                        <a href="https://www.amazon.com/Bargins-Heavyweight-Collection-Disposable-Dinnerware/dp/B01EMPRRY0/ref=sr_1_1?m=A3W58OWURERN0R&s=merchant-items&ie=UTF8&qid=1526012003&sr=1-1&keywords=Party+Bargins+Swirl+Plate+%7C+Heavyweight+Plastic+Elegant+%26+Durable+Mystyle+Collection+Disposable+Plates+Dinnerware+Set+%7C+pack+of+50"
                                             target="_blank" class="btn btn-primary">
                                             <i class="fa fa-shopping-cart"></i> Buy Now!</a>
                                     </p>
@@ -402,9 +403,16 @@
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                        <a href="../img/products/plates/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Perfect for Wedding and Party Dinnerware Set  pack of 50/81PCLzSgoFL._SL1500_.jpg"
                                             class="thumb">
-                                            <img src="../img/products/plates/Signature Collection Premium China Like WhiteGold 40 Pieces Plastic Plates Package (Includes 20 7.5 Inch Plates, 20 10.25 Inch Plates) (Gold)/81BS3ZaLMXL._SL1500_.jpg"
+                                            <img src="../img/products/plates/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Perfect for Wedding and Party Dinnerware Set  pack of 50/81PCLzSgoFL._SL1500_.jpg"
+                                                alt="" class="img-responsive">
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a href="../img/products/plates/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Perfect for Wedding and Party Dinnerware Set  pack of 50/715bR2P+fOL._SL1500_.jpg"
+                                            class="thumb">
+                                            <img src="../img/products/plates/Party Bargins Swirl Plate  Heavyweight Plastic Elegant & Durable Mystyle Collection Disposable Plates Perfect for Wedding and Party Dinnerware Set  pack of 50/715bR2P+fOL._SL1500_.jpg"
                                                 alt="" class="img-responsive">
                                         </a>
                                     </div>
@@ -413,43 +421,48 @@
 
                         </div>
 
+
                         <div class="box" id="details">
                             <p>
                                 <h4>Product details</h4>
                                 <ul>
-                                    <li>Premium Heavy Weight round China Like Plastic Plates, White with Gold checkabord border</li>
-                                    <li>Looks like real china plates, for a fraction of the cost.</li>
-                                    <li>Economical solution to create an elegant affair without having to buy real china plates.</li>
-                                    <li>Hassel free, no worries about transporting, breakage and cleaning of your dishes</li>
-                                    <li>Great for weddings, Birthday parties, Baby showers or any special event.</li>
+                                    <li>Brand New Condition. To ensure Quality, please make sure your purchase is made from Party
+                                        Bargains. Looks like real Clear Swirl Plate Combo, for a fraction of the cost.</li>
+                                    <li>SUPPLIES BUNDLE.Each of our plastic dinnerware sets contains enough plates for you to
+                                        host a party. That's why they are great for catering, food services, picnics, weddings,
+                                        buffets, family reunions, holidays, birthdays or just plain everyday use. Bundle
+                                        of 50-piece Mystyle collection, china like Clear plates, 25-7.5" Plates and 25-10.25"
+                                        Plates
+                                    </li>
+                                    <li>REUSABLE & WASHABLE: These amazing hard plastic plates are economic enough to be used
+                                        as disposables. There's nothing to prevent you, however, from hand-washing them and
+                                        reusing them as many times as you wish.</li>
+                                    <li>SUPERIOR QUALITY: Elegant for any special occasion. At Oasis Creations, we use nothing
+                                        but the best quality materials and cutting edge production processes. All of our
+                                        products are totally safe.</li>
+                                    <li>Hassle free, no worries about transporting, breakage and cleaning of your dishes. Enhance
+                                        your occasions with these beautiful Clear Swirl Plate disposable plates without being
+                                        busy washing them.</li>
                                 </ul>
                                 <h4>Other Description</h4>
-                                <p>
-                                    Signature Collection heavy weight elegant round china like plastic plates, looks just like real china when you set it on
-                                    your table. It is made out of high-quality heavyweight disposable plastic material and
-                                    has a beautiful design border. Use it for your wedding reception high-end birthday party
-                                    baby shower or office party or use it at home for special dinners. When you set your
-                                    table with this plates it will wow your guest and make a grand appearance, they won’t
-                                    believe it’s not real china plates, it gives you all the benefits of china plates without
-                                    the hassle of cleaning and dishwashing, but you may choose to hand wash it and reuse
-                                    it since it made of durable and premium quality.
+                                <p>Mystyle collection, china like Clear plates with swirl edge design are a must-have for any
+                                    formal affair, its disposable yet economical, and the most convenient element when preparing
+                                    for an event. Your table will have the lavish appearance of real china at a significant
+                                    lower cost. These elegant plastic plates are great for weddings and other events where
+                                    you need to impress without having to do the dishes afterwards, You can choose to dispose
+                                    or reuse these plates for another occasion. They are made of excellent quality and can
+                                    be cleaned and reused for future events. .
                                     <br />
-                                    <br /> Blue sky quality products are designed to meet the high demands of commercial foodservice
-                                    businesses. Every product is independently tested and selected to ensure the performance
-                                    you expect, for an everyday low price. The result is a quality item backed by our commitment
-                                    to your satisfaction. Founded in 1981,B> Blue Sky Trading Inc. revolutionized the market
-                                    of disposable ware. Already in its infancy, the company flooded shelves worldwide with
-                                    incomparable products, continuously expanding and refining its goods. From chic party
-                                    goods to trusty household items, Blue Sky has it all. The superior craftsmanship and
-                                    quality present in every one of the company’s items are what earned Blue Sky its reputable
-                                    name.
-                                    <br />
-                                    <br /> Blue Sky would like to reassure you that B>while every dish is disposable our commitment
-                                    to you is everlasting.
-                                </p>
+                                    <br /> Founded in 1981, Blue Sky Trading Inc. revolutionized the market of disposable ware.
+                                    Already in its infancy, the company flooded shelves worldwide with incomparable products,
+                                    continuously expanding and refining its goods. From chic party goods to trusty household
+                                    items, Blue Sky has it all. The superior craftsmanship and quality present in every one
+                                    of the company’s items are what earned Blue Sky its reputable name.
+                                    <br /> Blue Sky would like to reassure you that while every dish is disposable our commitment
+                                    to you is everlasting.</p>
                                 <h4>Size</h4>
                                 <ul>
-                                    <li>10" in diameter</li>
+                                    <li>10.25" and 7.5" in diameter</li>
                                 </ul>
 
                                 <!-- <blockquote>
